Fixed an issue with the navbar on smaller landscape screens. Will work on current suggestion page next.

--- a/frontend/src/css/navigation.css
+++ b/frontend/src/css/navigation.css
@@ -93,7 +93,6 @@
 @media (min-width: 567.98px) {
   .navbar {
     width: 95%;
-    height: 10rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
